fix home page image spacing

--- a/src/components/LatestFeature/LatestFeature.scss
+++ b/src/components/LatestFeature/LatestFeature.scss
@@ -3,7 +3,7 @@
 
 .latest-feature {
   background-color: $base-main;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
   position: relative;
   width: 25.8rem;
 
@@ -20,7 +20,7 @@
   background-color: $base-dark;
   padding: 0.5rem 1rem;
   height: 9.313rem;
-  width: 21.75rem;
+  width: 23rem;
   border-radius: 15px;
 
   &__header {
